package com.nashss.se.fivelifts.dynamodb;

public class WorkoutDao {
}
