package com.nashss.se.fivelifts.enums;

public enum WorkoutType {
    WORKOUT_A,
    WORKOUT_B
}
