@startuml
'https://plantuml.com/class-diagram

class User {
- userId : String
- userName : String
- weight : double
- deadlift : int
- squat : int
- bench : int
- ohp : int
- row : int
+ getUserId() : String
+ setUserId() : void
+ getUserName() : String
+ setUserName() : void
+ getWeight() : double
+ setWeight() : void
+ getDeadlift() : int
+ setDeadlift() : void
+ getSquat() : int
+ setSquat() : void
+ getBench() : int
+ setBench() : void
+ getOHP() : int
+ setOHP() : void
+ getRow() : int
+ setRow() : void
}

class Workout {
- workoutType : enum
- userId : String
- date : Date
- timeStarted : TimeStamp
- timeEnded : TimeStamp
- squatReps : int[]
- benchReps : int[]
- deadliftReps : int[]
- ohpReps : int[]
- rowReps : int[]
- isComplete : boolean
+ getWorkoutType() : String
+ setWorkoutType() : void
+ getUserId() : String
+ setUserId() : void
+ getDate() : Date
+ setDate() : void
+ getTimeStarted() : TimeStamp
+ setTimeStarted() : void
+ getTimeEnded() : TimeStamp
+ setTimeEnded() : void
+ getSquatReps() : int[]
+ setSquatReps() : void
+ getBenchReps() : int[]
+ setBenchReps() : void
+ getDeadliftReps() : int[]
+ setDeadliftReps() : void
+ getOHPReps() : int[]
+ setOHPReps() : void
+ getRowReps() : int[]
+ setRowReps() : void
+ isComplete() : boolean
- isComplete() : void
}

enum WorkoutType {
WORKOUT_A
WORKOUT_B
}

class UserDao {
- final dynamoDBMapper : DynamoDBMapper
+ getUser : User
+ addUser : User
}

class WorkoutDao {
- final dynamoDBMapper : DynamoDBMapper
+ getWorkout : Workout
+ createWorkout : Workout
+ getWorkoutHistory: List<Workout>
}

class AddRepsToSetActivity {
- final workoutDao : WorkoutDao
- handleRequest(AddRepsToSetRequest request) : AddRepsToSetResult
}

class StartWorkoutActivity {
- final workoutDao : WorkoutDao
+ handleRequest(StartWorkoutRequest request) : StartWorkoutResult
}

class EndWorkoutActivity {
- final workoutDao : WorkoutDao
- final userDao : UserDao
+ handleRequest(EndWorkoutRequest request) : EndWorkoutResult
}

class GetWorkoutHistoryActivity {
- final workoutDao : WorkoutDao
+ handleRequest(EndWorkoutRequest request) : EndWorkoutResult
}

class GetUpcomingWorkoutActivity {
- final workoutDao : workoutDao
- final userDao : UserDao
+ handleRequest(GetUpcomingWorkout request) : GetUpcomingResult
}

class CreateProgramActivity {
- final userDao : UserDao
+ handleRequest(CreateProgramRequest request) : CreateProgramResult
}

User --|> UserDao
Workout --|> WorkoutDao
AddRepsToSetActivity <|-- WorkoutDao
StartWorkoutActivity <|-- WorkoutDao
EndWorkoutActivity <|-- WorkoutDao
EndWorkoutActivity <|-- UserDao
GetWorkoutHistoryActivity <|-- WorkoutDao
GetUpcomingWorkoutActivity <|-- UserDao
GetUpcomingWorkoutActivity <|-- WorkoutDao
CreateProgramActivity <|-- UserDao
WorkoutType --|> Workout
@enduml

